# KNN-digit-recognizer

./: .coveragerc  README.md  pyproject.toml  tasks.py
dokumentaatio/: maarittelydokumentti.md  testausdokumentti.md  user_guide.md
dokumentaatio/viikkoraportit/: viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: KNN.py  config.py  data_loader.py  distance_calculator.py  distance_metrics.py  index.py  knn.py
src/tests/: data_loader_test.py  distance_calculator_test.py  knn_test.py
src/ui/: results_view.py  start_view.py  ui.py
